#--------------------------------------------------------------------------
# File and Version Information:
#  $Id$
#
# Description:
#  ChangeLog file for package psddl_hdf2psana
#------------------------------------------------------------------------

Package author: Andy Salnikov

Please describe any modifications that you made to the package in the
reverse time order.

Tag: V00-01-03
2013-03-21 Andy Salnikov
- fix for string EPICS PV type
- fix for BLD GMD schema
- splitting of shared BLD data types implemented

Tag: V00-01-02
2013-03-19 Andy Salnikov
- non-compound datasets

Tag: V00-01-01
2013-03-19 Andy Salnikov
- updates to evr, acquiris and epics

Tag: V00-01-00
2013-03-19 Andy Salnikov
- updates to epics stuff, try to avoid reading data if possible

Tag: V00-00-02
2013-03-15 Andy Salnikov
- forgot to add epics-h5.ddl

Tag: V00-00-01
2013-03-15 Andy Salnikov
- added epics, not very efficient implementation
- first production tag for nightlies

Tag: andy-20130313-01
2013-03-13 Andy Salnikov
- added acqiris and pnccd

Tag: andy-20130312-01
2013-03-12 Andy Salnikov
- progress on vlen arrays, adding evr abd bld to the bunch

Tag: andy-20130226-02
2013-02-26 Andy Salnikov
- work in progress

Tag: andy-20130226-01
2013-02-26 Andy Salnikov
- work in progress