@@ -11,6 +11,10 @@ Package author: Andy Salnikov
 Please describe any modifications that you made to the package in the
 reverse time order.
 
+Tag: V00-01-04
+2013-03-21 Andy Salnikov
+- fix attribute name in usdusb schema
+
 Tag: V00-01-03
 2013-03-21 Andy Salnikov
 - fix for string EPICS PV type
